# TO

./: Autocorrect.cpp  Autocorrect.h  Automaton.cpp  Automaton.h  CMakeLists.txt  DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  NFA.cpp  NFA.h  RE.cpp  RE.h  README.md  dfatest.json  fruit.txt  input-tfa1.json  main.cpp  test.json  tojson.py  wordlist.json  words.json
